[package]
edition = "2021"
name = "dep-res"
version = "0.1.0"
description = "Simple dependency resolution"
categories = ["algorithms"]
keywords = ["dependency", "resolution", "dep", "dep-res"]
license = "MIT"
repository = "https://github.com/2A5F/dep-res"
authors = ["2A5F <u2a5f@outlook.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
dashmap = {version = "5.4", features = ["rayon"]}
rayon = "1.7"
thiserror = "1"
tuples = "1.12"
